//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Session {
  id String [pk]
  userId String [unique, not null]
  user User [not null]
  expires DateTime [not null]
  sessionToken String [unique, not null]
  accessToken String [unique]
  refreshToken String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
}

Table User {
  id String [pk]
  email String [unique, not null]
  mobile String [unique, not null]
  username String [not null]
  credential String [not null]
  imageUrl String
  oktaId String [unique]
  oktaProfile OktaProfile
  otpCounter String
  otpSecret String
  session Session
  isEnabled Boolean [not null, default: false]
  profiles Profile [not null]
  device String
  lastLoginTime DateTime
  onboardTime DateTime
  country String [not null]
  preferredLanguage LanguageType [not null, default: 'en']
  termsAgreed Boolean [default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  deletedAt DateTime
  isDeleted Boolean [not null, default: false]
  Notification Notification [not null]
  articles Article [not null]
  events Event [not null]
  binahs Binah [not null]
  partners Partner [not null]
}

Table OktaProfile {
  id String [pk]
  userId String [unique, not null]
  user User [not null]
  givenName String
  familyName String
  nickname String
  picture String
  website String
  gender String
  locale String
  phoneNumber String
  phoneVerified Boolean
  department String
  employeeId String
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Companies {
  id String [pk]
  name String [unique, not null]
  localizedName Json
  imageUrl String
  profiles Profile [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  isDeleted Boolean [not null, default: false]
  deletedAt DateTime
  availableLanguages Json
  countries String[] [not null]
  enableBiometric Boolean [not null, default: true]
  enableChat Boolean [not null, default: false]
  enableOTP Boolean [not null, default: false]
}

Table Profile {
  id Int [pk, increment]
  name String [unique, not null]
  market String [not null]
  members User [not null]
  remark String
  role Role [not null, default: 'EDITOR']
  type ProfileType [not null]
  company Companies [not null]
  companyId String [not null]
  instances Instance [not null]
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Instance {
  id Int [pk, increment]
  name String [not null]
  market String [not null]
  schema Json [not null]
  isEnabled Boolean [not null, default: false]
  profile Profile [not null]
  profileId Int [not null]
  articles Article [not null]
  events Event [not null]
  binahs Binah [not null]
  partners Partner [not null]
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Article {
  id Int [pk, increment]
  title String [not null]
  body String [not null]
  th_title String
  in_title String
  ms_title String
  vi_title String
  hi_title String
  zh_title String
  zh_HK_title String
  th_body String
  in_body String
  ms_body String
  vi_body String
  hi_body String
  zh_body String
  zh_HK_body String
  status ContentStatus [not null, default: 'DRAFT']
  creator User [not null]
  creatorId String [not null]
  instance Instance
  instanceId Int
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Event {
  id Int [pk, increment]
  title String [not null]
  body String [not null]
  imageUrl String
  speakerName String
  speakerCredential String
  speakerDescription String
  status ContentStatus [not null, default: 'DRAFT']
  creator User [not null]
  creatorId String [not null]
  instance Instance
  instanceId Int
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Binah {
  id Int [pk, increment]
  name String [not null]
  status ContentStatus [not null, default: 'DRAFT']
  creator User [not null]
  creatorId String [not null]
  instance Instance
  instanceId Int
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Partner {
  id Int [pk, increment]
  name String [not null]
  status ContentStatus [not null, default: 'DRAFT']
  creator User [not null]
  creatorId String [not null]
  instance Instance
  instanceId Int
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Notification {
  id Int [pk, increment]
  title String [not null]
  message String [not null]
  isRead Boolean [not null, default: false]
  user User [not null]
  userId String [not null]
  isDeleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ProfileToUser {
  profilesId Int [ref: > Profile.id]
  membersId String [ref: > User.id]
}

Enum LanguageType {
  en
  th
  in
  ms
  vi
  hi
  zh
  zh_HK
}

Enum Role {
  READER
  EDITOR
  OWNER
}

Enum ProfileType {
  GOW
  LBU
  CLIENT
}

Enum ContentType {
  VIDEO
  ARTICLE
  EVENT
  PARTNER
}

Enum ContentStatus {
  DRAFT
  SUBMITTED
  REVIEW
  APPROVED
  PUBLISHED
  REJECTED
}

Ref: Session.userId - User.id

Ref: OktaProfile.userId - User.id

Ref: Profile.companyId > Companies.id

Ref: Instance.profileId > Profile.id

Ref: Article.creatorId > User.id

Ref: Article.instanceId > Instance.id

Ref: Event.creatorId > User.id

Ref: Event.instanceId > Instance.id

Ref: Binah.creatorId > User.id

Ref: Binah.instanceId > Instance.id

Ref: Partner.creatorId > User.id

Ref: Partner.instanceId > Instance.id

Ref: Notification.userId > User.id